test/mpi/errors/f77/Makefile.sm
SUBDIRS = 

# A special testing target to simplify testing just the F77 code
testing:
	../../runtests -srcdir=$(srcdir) -tests=testlist \
		   -mpiexec=$(bindir)/mpiexec \
		   -xmlfile=summary.xml


smvarSubdir_do_dependencies=no
smvar_dependenciesDummy=yes
